# pcm_to_ogg

./: .metadata  CHANGELOG.md  LICENSE  README.md  build_web.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/web/: pcm_to_ogg.js  pcm_to_ogg.wasm  pcm_to_ogg.wasm.map
example/: pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/web/: pcm_to_ogg.js
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: pcm_to_ogg.podspec
ios/Classes/: PcmToOggPlugin.swift
lib/: pcm_to_ogg.dart  pcm_to_ogg_method_channel.dart  pcm_to_ogg_web.dart
lib/assets/web/: pcm_to_ogg.js  pcm_to_ogg.wasm  pcm_to_ogg.wasm.map
lib/src/: pcm_to_ogg_platform_interface.dart
lib/src/native/: pcm_to_ogg_native.dart
lib/src/stub/: pcm_to_ogg_stub.dart
lib/src/web/: pcm_to_ogg_web.dart
linux/: CMakeLists.txt  pcm_to_ogg_plugin.cc  pcm_to_ogg_plugin_private.h
linux/include/pcm_to_ogg/: pcm_to_ogg_plugin.h
linux/test/: pcm_to_ogg_plugin_test.cc
macos/: pcm_to_ogg.podspec
macos/Classes/: PcmToOggPlugin.swift
src/: CMakeLists.txt  pcm_to_ogg.c
test/: pcm_to_ogg_method_channel_test.dart  pcm_to_ogg_test.dart
windows/: CMakeLists.txt  pcm_to_ogg_plugin.cpp  pcm_to_ogg_plugin.h  pcm_to_ogg_plugin_c_api.cpp
windows/include/pcm_to_ogg/: pcm_to_ogg_plugin_c_api.h
windows/test/: pcm_to_ogg_plugin_test.cpp
(+4 files in other folders)
